--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>SafeSky UA</title>
 
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b0f14">
 
   <link rel="stylesheet" href="css/style.css">
